meta data added

--- a/CSCB700 Search Engine Optimization in Web/Project/artists.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/artists.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156024998-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156024998-1');
+</script>
+
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Culture Events Hub - Artists" />
+    <meta
+      name="description"
+      content="Here you can find all the artists that participate in the events from the Culture Events Hub."
+    />
+    <meta name="keywords" content="events, tickets, artists, online ticket system" />
+    <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
     <title>Culture Events Hub - Artists</title>
     <link rel="shortcut icon" href="assets/logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/logo/favicon.ico" type="image/x-icon">
@@ -84,8 +104,26 @@
           <li class="nav-item">
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
-          <li class="nav-item">
-            <a title="AboutPage" class="nav-link" href="about.html">About</a>
+          <li class="nav-item dropdown">
+            <a title="About"
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Info
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a title="AboutUs" class="dropdown-item" href="about.html">About us</a>
+              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <div class="dropdown-divider"></div>
+              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
+              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
+              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+            </div>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
