--- a/CSCB700 Search Engine Optimization in Web/Project/halls.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/halls.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-156024998-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-156024998-1");
+    </script>
+
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Culture Events Hub - Halls" />
+    <meta
+      name="description"
+      content="Here you can find all the halls where the events of the Culture Events Hub take place."
+    />
+    <meta name="keywords" content="events, tickets, event halls, halls, online ticket system" />
+    <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
     <title>Culture Events Hub - Halls</title>
     <link
       rel="shortcut icon"
@@ -39,7 +64,9 @@
 
   <body class="custom-body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a title="HomePage" class="navbar-brand" href="index.html">Culture Events Hub</a>
+      <a title="HomePage" class="navbar-brand" href="index.html"
+        >Culture Events Hub</a
+      >
       <button
         class="navbar-toggler"
         type="button"
@@ -60,7 +87,8 @@
             >
           </li>
           <li class="nav-item dropdown">
-            <a title="Events"
+            <a
+              title="Events"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -72,14 +100,28 @@
               Events
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="UpcomingEvents" class="dropdown-item" href="upcoming-events.html">Upcoming</a>
-              <a title="PastEvents" class="dropdown-item" href="past-events.html">Past</a>
+              <a
+                title="UpcomingEvents"
+                class="dropdown-item"
+                href="upcoming-events.html"
+                >Upcoming</a
+              >
+              <a
+                title="PastEvents"
+                class="dropdown-item"
+                href="past-events.html"
+                >Past</a
+              >
               <div class="dropdown-divider"></div>
-              <a title="AllEvents" class="dropdown-item" href="all-events.html">All</a>
+              <a title="AllEvents" class="dropdown-item" href="all-events.html"
+                >All</a
+              >
             </div>
           </li>
           <li class="nav-item">
-            <a title="MyTickets" class="nav-link" href="my-tickets.html">My Tickets</a>
+            <a title="MyTickets" class="nav-link" href="my-tickets.html"
+              >My Tickets</a
+            >
           </li>
           <li class="nav-item">
             <a title="Artists" class="nav-link" href="artists.html">Artists</a>
@@ -87,8 +129,26 @@
           <li class="nav-item">
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
-          <li class="nav-item">
-            <a title="AboutPage" class="nav-link" href="about.html">About</a>
+          <li class="nav-item dropdown">
+            <a title="About"
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Info
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a title="AboutUs" class="dropdown-item" href="about.html">About us</a>
+              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <div class="dropdown-divider"></div>
+              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
+              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
+              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+            </div>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -123,7 +183,9 @@
             <a title="LoginPage" class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a title="RegisterPage" class="nav-link" href="register.html">Register</a>
+            <a title="RegisterPage" class="nav-link" href="register.html"
+              >Register</a
+            >
           </li>
         </ul>
       </nav>
@@ -131,7 +193,9 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb custom-breadcrumb">
         <li class="breadcrumb-item">
-          <a title="HomePage" class="custom-breadcrumb-link" href="index.html">Home</a>
+          <a title="HomePage" class="custom-breadcrumb-link" href="index.html"
+            >Home</a
+          >
         </li>
         <li
           class="breadcrumb-item active custom-breadcrumb-active-item"
