--- a/CSCB700 Search Engine Optimization in Web/Project/all-events.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/all-events.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-156024998-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-156024998-1");
+    </script>
+
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Culture Events Hub - All Events" />
+    <meta
+      name="description"
+      content="Here you can find all the events from the Culture Events Hub."
+    />
+    <meta name="keywords" content="events, tickets, online ticket system" />
+    <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
     <title>Culture Events Hub - All Events</title>
     <link
       rel="shortcut icon"
@@ -94,7 +119,9 @@
             </div>
           </li>
           <li class="nav-item">
-            <a title="MyTickets" class="nav-link" href="my-tickets.html">My Tickets</a>
+            <a title="MyTickets" class="nav-link" href="my-tickets.html"
+              >My Tickets</a
+            >
           </li>
           <li class="nav-item">
             <a title="Artists" class="nav-link" href="artists.html">Artists</a>
@@ -102,8 +129,26 @@
           <li class="nav-item">
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
-          <li class="nav-item">
-            <a title="AboutPage" class="nav-link" href="about.html">About</a>
+          <li class="nav-item dropdown">
+            <a title="About"
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Info
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a title="AboutUs" class="dropdown-item" href="about.html">About us</a>
+              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <div class="dropdown-divider"></div>
+              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
+              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
+              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+            </div>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -138,7 +183,9 @@
             <a title="LoginPage" class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a title="RegisterPage" class="nav-link" href="register.html">Register</a>
+            <a title="RegisterPage" class="nav-link" href="register.html"
+              >Register</a
+            >
           </li>
         </ul>
       </nav>
@@ -146,7 +193,9 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb custom-breadcrumb">
         <li class="breadcrumb-item">
-          <a title="HomePage" class="custom-breadcrumb-link" href="index.html">Home</a>
+          <a title="HomePage" class="custom-breadcrumb-link" href="index.html"
+            >Home</a
+          >
         </li>
         <li
           class="breadcrumb-item active custom-breadcrumb-active-item"
@@ -179,8 +228,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -204,8 +257,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -229,8 +286,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -256,8 +317,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -281,8 +346,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -306,8 +375,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -333,8 +406,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -358,8 +435,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
@@ -383,8 +464,12 @@
               <li class="list-group-item custom-li-item">Location</li>
             </ul>
             <div class="card-body">
-              <a title="BuyTicket" href="ticket-details.html" class="card-link">Buy Ticket</a>
-              <a title="SeeEvent" href="event-details.html" class="card-link">See Event</a>
+              <a title="BuyTicket" href="ticket-details.html" class="card-link"
+                >Buy Ticket</a
+              >
+              <a title="SeeEvent" href="event-details.html" class="card-link"
+                >See Event</a
+              >
             </div>
           </div>
         </div>
