--- a/CSCB700 Search Engine Optimization in Web/Project/index.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156024998-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156024998-1');
+</script>
+
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Culture Events Hub - Home" />
+    <meta
+      name="description"
+      content="Culture Events Hub is an online ticket system .The system offers their clinets the latest and most exclusive culture events. The tickets are received on the user's mobile phone for their convenience."
+    />
+    <meta name="keywords" content="events, tickets, online ticket system" />
+    <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
     <title>Culture Events Hub</title>
+
     <link rel="shortcut icon" href="assets/logo/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/styles/style.css" type="text/css" />
@@ -87,11 +107,26 @@
           <li class="nav-item">
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
-          <li class="nav-item">
-            <a title="AboutPage" class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a title="PrivacyPolicyPage" class="nav-link" href="privacy.html">Privacy Policy</a>
+          <li class="nav-item dropdown">
+            <a title="About"
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Info
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a title="AboutUs" class="dropdown-item" href="about.html">About us</a>
+              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <div class="dropdown-divider"></div>
+              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
+              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
+              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+            </div>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
