title for <a> edited

--- a/CSCB700 Search Engine Optimization in Web/Project/halls.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/halls.html
@@ -64,7 +64,7 @@
 
   <body class="custom-body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a title="HomePage" class="navbar-brand" href="index.html"
+      <a title="Home Page" class="navbar-brand" href="index.html"
         >Culture Events Hub</a
       >
       <button
@@ -82,7 +82,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a title="HomePage" class="nav-link" href="index.html"
+            <a title="Home Page" class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -101,25 +101,25 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a
-                title="UpcomingEvents"
+                title="Upcoming Events"
                 class="dropdown-item"
                 href="upcoming-events.html"
                 >Upcoming</a
               >
               <a
-                title="PastEvents"
+                title="Past Events"
                 class="dropdown-item"
                 href="past-events.html"
                 >Past</a
               >
               <div class="dropdown-divider"></div>
-              <a title="AllEvents" class="dropdown-item" href="all-events.html"
+              <a title="All Events" class="dropdown-item" href="all-events.html"
                 >All</a
               >
             </div>
           </li>
           <li class="nav-item">
-            <a title="MyTickets" class="nav-link" href="my-tickets.html"
+            <a title="My Tickets" class="nav-link" href="my-tickets.html"
               >My Tickets</a
             >
           </li>
@@ -130,7 +130,7 @@
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
           <li class="nav-item dropdown">
-            <a title="About"
+            <a title="Information"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -142,8 +142,8 @@
               Info
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="AboutUs" class="dropdown-item" href="about.html">About us</a>
-              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <a title="About Us" class="dropdown-item" href="about.html">About us</a>
+              <a title="Privacy Policy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
               <div class="dropdown-divider"></div>
               <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
               <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
@@ -180,10 +180,10 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a title="LoginPage" class="nav-link" href="login.html">Login</a>
+            <a title="Login Page" class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a title="RegisterPage" class="nav-link" href="register.html"
+            <a title="Register Page" class="nav-link" href="register.html"
               >Register</a
             >
           </li>
@@ -193,7 +193,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb custom-breadcrumb">
         <li class="breadcrumb-item">
-          <a title="HomePage" class="custom-breadcrumb-link" href="index.html"
+          <a title="Home Page" class="custom-breadcrumb-link" href="index.html"
             >Home</a
           >
         </li>
