--- a/CSCB700 Search Engine Optimization in Web/Project/my-tickets.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/my-tickets.html
@@ -59,7 +59,7 @@
 
   <body class="custom-body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a title="HomePage" class="navbar-brand" href="index.html">Culture Events Hub</a>
+      <a title="Home Page" class="navbar-brand" href="index.html">Culture Events Hub</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -75,7 +75,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a title="HomePage" class="nav-link" href="index.html"
+            <a title="Home Page" class="nav-link" href="index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -93,14 +93,14 @@
               Events
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="UpcomingEvents" class="dropdown-item" href="upcoming-events.html">Upcoming</a>
-              <a title="PastEvents" class="dropdown-item" href="past-events.html">Past</a>
+              <a title="Upcoming Events" class="dropdown-item" href="upcoming-events.html">Upcoming</a>
+              <a title="Past Events" class="dropdown-item" href="past-events.html">Past</a>
               <div class="dropdown-divider"></div>
-              <a title="AllEvents" class="dropdown-item" href="all-events.html">All</a>
+              <a title="All Events" class="dropdown-item" href="all-events.html">All</a>
             </div>
           </li>
           <li class="nav-item">
-            <a title="MyTickets" class="nav-link" href="my-tickets.html">My Tickets</a>
+            <a title="My Tickets" class="nav-link" href="my-tickets.html">My Tickets</a>
           </li>
           <li class="nav-item">
             <a title="Artists" class="nav-link" href="artists.html">Artists</a>
@@ -109,7 +109,7 @@
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
           <li class="nav-item dropdown">
-            <a title="About"
+            <a title="Information"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -121,8 +121,8 @@
               Info
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="AboutUs" class="dropdown-item" href="about.html">About us</a>
-              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <a title="About Us" class="dropdown-item" href="about.html">About us</a>
+              <a title="Privacy Policy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
               <div class="dropdown-divider"></div>
               <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
               <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
@@ -159,10 +159,10 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a title="LoginPage" class="nav-link" href="login.html">Login</a>
+            <a title="Login Page" class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a title="RegisterPage" class="nav-link" href="register.html">Register</a>
+            <a title="Register Page" class="nav-link" href="register.html">Register</a>
           </li>
         </ul>
       </nav>
@@ -170,7 +170,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb custom-breadcrumb">
         <li class="breadcrumb-item">
-          <a title="HomePage" class="custom-breadcrumb-link" href="index.html">Home</a>
+          <a title="Home Page" class="custom-breadcrumb-link" href="index.html">Home</a>
         <li class="breadcrumb-item active custom-breadcrumb-active-item" aria-current="page">My Tickets</li>
       </ol>
     </nav>
@@ -190,7 +190,7 @@
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 1</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 1</a></td>
             <td>1</td>
             <td>19.99 lv.</td>
             <td>Event 1</td>
@@ -198,7 +198,7 @@
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 2</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 2</a></td>
             <td>2</td>
             <td>49.99 lv.</td>
             <td>Event 2</td>
@@ -206,7 +206,7 @@
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 3</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 3</a></td>
             <td>5</td>
             <td>129.99 lv.</td>
             <td>Event 3</td>
@@ -214,7 +214,7 @@
           </tr>
           <tr>
             <th scope="row">4</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 4</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 4</a></td>
             <td>10</td>
             <td>199.99 lv.</td>
             <td>Event 4</td>
@@ -222,7 +222,7 @@
           </tr>
           <tr>
             <th scope="row">5</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 5</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 5</a></td>
             <td>3</td>
             <td>79.99 lv.</td>
             <td>Event 5</td>
@@ -230,7 +230,7 @@
           </tr>
           <tr>
             <th scope="row">6</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 6</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 6</a></td>
             <td>7</td>
             <td>99.99 lv.</td>
             <td>Event 6</td>
@@ -238,7 +238,7 @@
           </tr>
           <tr>
             <th scope="row">7</th>
-            <td><a title="TicketDetails" href="ticket-details.html">Ticket 7</a></td>
+            <td><a title="Ticket Details" href="ticket-details.html">Ticket 7</a></td>
             <td>4</td>
             <td>39.99 lv.</td>
             <td>Event 7</td>
