--- a/CSCB700 Search Engine Optimization in Web/Project/about.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/about.html
@@ -67,7 +67,7 @@
 
   <body class="custom-body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a title="HomePage" class="navbar-brand" href="index.html"
+      <a title="Home Page" class="navbar-brand" href="index.html"
         >Culture Events Hub</a
       >
       <button
@@ -104,25 +104,25 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a
-                title="UpcomingEvents"
+                title="Upcoming Events"
                 class="dropdown-item"
                 href="upcoming-events.html"
                 >Upcoming</a
               >
               <a
-                title="PastEvents"
+                title="Past Events"
                 class="dropdown-item"
                 href="past-events.html"
                 >Past</a
               >
               <div class="dropdown-divider"></div>
-              <a title="AllEvents" class="dropdown-item" href="all-events.html"
+              <a title="All Events" class="dropdown-item" href="all-events.html"
                 >All</a
               >
             </div>
           </li>
           <li class="nav-item">
-            <a title="MyTickets" class="nav-link" href="my-tickets.html"
+            <a title="My Tickets" class="nav-link" href="my-tickets.html"
               >My Tickets</a
             >
           </li>
@@ -134,7 +134,7 @@
           </li>
           <li class="nav-item dropdown">
             <a
-              title="About"
+              title="Information"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -146,10 +146,10 @@
               Info
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="AboutUs" class="dropdown-item" href="about.html"
+              <a title="About Us" class="dropdown-item" href="about.html"
                 >About us</a
               >
-              <a title="PrivacyPolicy" class="dropdown-item" href="privacy.html"
+              <a title="Privacy Policy" class="dropdown-item" href="privacy.html"
                 >Privacy Policy</a
               >
               <div class="dropdown-divider"></div>
@@ -200,10 +200,10 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a title="LoginPage" class="nav-link" href="login.html">Login</a>
+            <a title="Login Page" class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
-            <a title="RegisterPage" class="nav-link" href="register.html"
+            <a title="Register Page" class="nav-link" href="register.html"
               >Register</a
             >
           </li>
@@ -213,7 +213,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb custom-breadcrumb">
         <li class="breadcrumb-item">
-          <a title="HomePage" class="custom-breadcrumb-link" href="index.html"
+          <a title="Home Page" class="custom-breadcrumb-link" href="index.html"
             >Home</a
           >
         </li>
@@ -273,14 +273,14 @@
       <div class="row custom-social-container">
         <div class="col-12">
           <h3>Follow us on:</h3>
-          <a title="FacebookPage" href="https://www.facebook.com/paunski777777">
+          <a title="Facebook Page" href="https://www.facebook.com/paunski777777">
             <i class="fab fa-facebook custom-social-icon"></i>
           </a>
-          <a title="InstagramPage" href="https://www.instagram.com/a7paunski/">
+          <a title="Instagram Page" href="https://www.instagram.com/a7paunski/">
             <i class="fab fa-instagram custom-social-icon"></i>
           </a>
           <a
-            title="LinkedInPage"
+            title="LinkedIn Page"
             href="https://www.linkedin.com/in/alexander-paunski-02189516b/"
           >
             <i class="fab fa-linkedin custom-social-icon"></i>
